--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        
+        <!-- bootstrap -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
         <title> ZapSignal </title>
     </head>
 
     <body>
-        <h1>Hello world!</h1>
+        <header class=""> seila o que vem aqui</header>
+        <div class="container p-3">
+            <h1>Hello world!</h1>
+            <div class="jumbotron">
+                <h2>Super chat iii</h2>
+            </div>
+        </div>
         
 
         <script src="/socket.io/socket.io.js"></script>
-        <script src="./js/chat.js"></script>
+        <script src="js/chat.js"></script>
     </body>
 </html>
