--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,29 @@
         <!-- bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <title> ZapSignal </title>
+        <title> Socket Chat </title>
     </head>
 
     <body>
-        <header class=""> seila o que vem aqui</header>
-        <div class="container p-3">
-            <h1>Hello world!</h1>
+        <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+            <strong>Socket Chat</strong> 
+        </header>
+
+        <div class="container">
             <div class="jumbotron">
-                <h2>Super chat iii</h2>
+                <div class="container border mb-2" style="background-color:white;">
+                    ihihihiih
+                    <br>fasjdfaksf
+                    <br>kkkkkkk
+                </div>
+                <form class="form-inline d-flex ">
+                    <div class="form-group mr-1 mb-2 flex-fill">
+                        <input type="text" class="form-control " id="input_mensage" placeholder="say something...">
+                    </div>
+                    <button type="submit" class="btn btn-primary float-right mb-2">Send</button>
+                </form>
             </div>
         </div>
-        
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="js/chat.js"></script>
