add username page

--- a/public/chat.html
+++ b/public/chat.html
@@ -17,12 +17,17 @@
 
         <div class="container">
             <div class="jumbotron">
-                <form class="form-inline d-flex" action="chat.html">
+                <div class="container border mb-2" style="background-color:white;">
+                    ihihihiih
+                    <br>fasjdfaksf
+                    <br>kkkkkkk
+                </div>
+                <form class="form-inline d-flex ">
                     <div class="form-group mr-1 mb-2 flex-fill">
-                        <label for="username" class="sr-only"></label>
-                        <input type="text" class="form-control" name="username" id="username" placeholder="Username">
+                        <label for="message" class="sr-only"></label>
+                        <input type="text" class="form-control" name="message" id="message" placeholder="say something...">
                     </div>
-                    <button type="submit" class="btn btn-outline-primary float-right mb-2">Join Chat</button>
+                    <button type="submit" class="btn btn-outline-primary float-right mb-2">Send</button>
                 </form>
             </div>
         </div>
