users array (not done)

--- a/public/chat.html
+++ b/public/chat.html
@@ -17,10 +17,8 @@
 
         <div class="container">
             <div class="jumbotron">
-                <div class="container border mb-2" style="background-color:white;">
-                    ihihihiih
-                    <br>fasjdfaksf
-                    <br>kkkkkkk
+                <div class="container border mb-2" id="chat" style="background-color:white; height: 400px;">
+                    nada ainda
                 </div>
                 <form class="form-inline d-flex ">
                     <div class="form-group mr-1 mb-2 flex-fill">
