--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             <div class="jumbotron">
-                <form class="form-inline d-flex" action="chat.html">
+                <form id="join_chat" class="form-inline d-flex" action="chat.html">
                     <div class="form-group mr-1 mb-2 flex-fill">
                         <label for="username" class="sr-only"></label>
                         <input type="text" class="form-control" name="username" id="username" placeholder="Username">
