change some style

--- a/public/chat.html
+++ b/public/chat.html
@@ -17,8 +17,8 @@
 
         <div class="container">
             <div class="jumbotron">
-                <div class="container border mb-2" id="chat" style="background-color:white; height: 400px;">
-                    <ul id='messages_list'>
+                <div class="mb-2 overflow-auto" id="chat" style="background-color:white; height: 400px;">
+                    <ul class="list-group list-group-flush" id='messages_list'>
                     </ul>
                 </div>
                 <form id='send_message' class="form-inline d-flex ">
